--- a/main.html
+++ b/main.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questions Display</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>CSS List of Questions</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
+
+    <h1>List of Questions</h1>
 
     <blockquote class="questions">
         <p>Who was the first female to become the governor of an Indian state?</p>
     </blockquote>
+
     <blockquote class="questions">
-        <p>Who among first Woman to climb Mount Everest twice?</p>
+        <p>Who among the first women to climb Mount Everest twice?</p>
     </blockquote>
+
     <blockquote class="questions">
-        <p>Who is President of India?</p>
+        <p>Who is the President of India?</p>
     </blockquote>
 
 </body>
